Fix images on mobile

--- a/resources/css/atstovavimas.css
+++ b/resources/css/atstovavimas.css
@@ -158,6 +158,10 @@ nav a {
     h4 {
         font-size: 1.4rem !important;
     }
+
+    .img-fluid {
+        max-width: 700px !important
+    }
 }
 
 svg {
